--- a/public/app.css
+++ b/public/app.css
@@ -15,6 +15,7 @@ body {
   padding: 1rem;
   min-height: 64px;
   background: #fff;
+
 }
 
 .header {
@@ -41,14 +42,13 @@ body {
 .footer {
   box-shadow: 0 0 3px rgba(0, 0, 0, 0.16);
   justify-content: center;
+  position:absolute;
+  bottom: 0;
+  width: 100%;
 }
 
 .content {
-  align-items: center;
-  display: flex;
-  justify-content: center;
-  min-height: 150px;
-  padding: 60px;
+  position: relative;
 }
 
 .content::after {
