--- a/src/App.scss
+++ b/src/App.scss
@@ -69,7 +69,8 @@
 /* Header */
 
 .uni-Header {
-  background: var(--algolia-theme-color-primary);
+  //background: var(--algolia-theme-color-primary);
+  background: #000;
   background-image: linear-gradient(
     180deg,
     rgba(0, 0, 0, 0) 54%,
@@ -719,5 +720,24 @@
 [data-layout='mobile'] {
   @media (--algolia-theme-breakpoint-above-md) {
     display: none;
+  }
+}
+
+.social-local-landing {
+  font-size: 3rem;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  justify-content: center;
+  background-color: #000;
+  color:#fff;
+  width: 100vw;
+  height: calc(100vh - 80px);
+
+  span {
+    &.primary {
+      color: gold;
+    }
+    padding :20px 20px;
   }
 }
